Owner debugging